# libvmod-cookie

./: .gitignore  .travis.yml  CHANGES.rst  Makefile.am  README.rst  configure.ac  vmod-cookie.spec
debian/: changelog  control  dirs
src/: Makefile.am  vmod_cookie.c  vmod_cookie.vcc
src/tests/: 01-set-delete-produce.vtc  02-clean.vtc  03-null.vtc  04-filter.vtc  05-get.vtc  06-concurrent-query.vtc  07-isset.vtc  08-backend.vtc  08-overflow.vtc  10-parser.vtc  11-sort.vtc  30-format_1123.vtc  r28.vtc  test01.vtc
